test/bad/basic/decl04.px

Int x = 0
if true do
    Bool x = true
